--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "yarn; yarn build; surge ./build"
+    "deploy": "yarn; yarn build; surge ./build fretboard-exercises.surge.sh"
   },
   "browserslist": [
     ">0.2%",
