--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -15,6 +15,4 @@ jobs:
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Deploy
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: deploy
+        run: npm run deploy
