--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "styled-components": "5.2.1"
   },
   "devDependencies": {
-    "typescript": "4.1.3"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.5",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "dev": "yarn start",
