--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash": "4.17.20",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
